# nameless-deploy-tools

./: .clang-format  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  Notes-on-CentOS-7-to-8-upgrade.md  README.md  build-docker-base.sh  build-docker.sh  common.sh  compile-requirements.sh  dev-requirements.txt  document_commands.py  faster_register_complete.sh  infra.properties  master.properties  pyproject.toml  release.sh  requirements.txt  setup.cfg  setup.py  update-commandlist.sh
.github/: dependabot.yml
.github/workflows/: black.yml  draft_release.yml  flake8.yml  isort.yml  pytest.yml  ruff.yml
docker/: Dockerfile
docker-base/: Dockerfile  dockerd-entrypoint.sh  start-docker.sh
docs/: Notes-on-CentOS-7-to-8-upgrade.md  commands.md  parameters.md  template-processing.md  workspace.md
n_utils/: __init__.py  account_utils.py  aws_infra_util.py  az_util.py  bw_util.py  cf_bootstrap.py  cf_deploy.py  cf_utils.py  cli.py  cloudfront_utils.py  connect.py  ecr_utils.py  ecs_utils.py  git_utils.py  iam_utils.py  log_events.py  lp_util.py  maven_utils.py  mfa_utils.py  nameless-dt-load-project-env.py  nameless-dt-print-aws-profiles.cpp  nameless-dt-register-complete.cpp  ndt.py  ndt_project.py  profile_util.py  project_util.py  route53_util.py  tf_utils.py  utils.py  writer.py  yuuuu3332111i1l1i.py
n_utils/includes/: apache_tools.sh  autocomplete-helpers.sh  aws_domainjoin.sh  aws_tools.sh  bake-docker.sh  bake-image.sh  bake-image.yml  bake-tags.yaml  bake-win-image.yml  cloud_init_footer.sh  cloud_init_functions.sh  common_tools.sh  deploy-azure.sh  deploy-cdk.sh  deploy-serverless.sh  deploy-stack.sh  deploy-terraform.sh  ebs-functions.sh  fetch-secrets-lpass.sh  fetch-secrets-s3.sh  fetch-secrets-vault.sh  generate_jobs.groovy  get-docker.sh  hook.sh  install_tools.sh  jenkins_tools.sh  lastpass-login.sh  lastpass-logout.sh  letsencrypt.sh  manage-account.yaml  nexus_tools.sh  openvpn_tools.sh  prepare.ps1  prepare.sh  print-create-instructions.sh  ssh-authorized-keys-command.te  ssh_tools.sh  start-transcript.ps1  stop-transcript.ps1  store-secret-lpass.sh  (+13 more)
n_utils/includes/creatable-templates/: bakery-roles.yaml  jenkins.yaml  network.yaml
n_utils/includes/creatable-templates/jenkins/: generate_jobs.groovy  packages.txt  post_install.sh  pre_install.sh  userdata.sh
n_utils/includes/creatable-templates/network/: common.yaml
n_utils/includes/repos/: mysql57-community.repo  newrelic-infra.repo  nginx.repo  varnish41.repo  varnish62.repo  varnish63.repo  varnish64.repo  varnish65.repo  varnish66.repo
n_utils/includes/template-snippets/: apache-sg.yaml  assume-deploy-role.sh  delete-old-snapshots.min.js  delete-old-snapshots.yaml  external-lambdarole-policy.yaml  instanceprofile.yaml  internal-lambdarole-policy.yaml  nexus-userdata.sh  policy_baking.yaml  policy_cloud_init.yaml  policy_ec2_allow_volume_ops.yaml  policy_ec2_associate_address.yaml  policy_invoke_lambda.yaml  policy_s3_secure_download.yaml  policy_ssm.yaml  policydoc_assumerole.yaml  role_bake.yaml  route53.yaml  sg_bake.yaml  sg_win_bake.yaml
n_utils/includes/template-snippets/bootstrap/: bakery-roles.yaml  network.yaml
n_utils/tests/: account_utils_test.py  aws_infra_util_test.py  cf_utils_test.py  cloudfront_utils_test.py  conftest.py  maven_utils_test.py  mfa_utils_test.py  ndt_project_test.py  pom.xml  profile_util_test.py  tf_utils_test.py  utils_test.py
n_utils/tests/properties/: test-compound-values.properties  test-stackref.properties
n_utils/tests/templates/: bucketpolicy.yaml  include-test.yaml  include-test2.yaml  test-compound-values.yaml  test-param-import.yaml  test-stackref.yaml  test.yaml
test/: infra.properties
test/azure-armtest/: template.yaml
test/azure-azuretest/: azuredeploy.json  template.yaml  variables.json
test/azure-biceptest/: infra.properties  template.bicep
