# Copyright 2016-2024 Nitor Creations Oy
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "nameless-deploy-tools"
version = "1.331"
description = "Tools for deploying to AWS via CloudFormation and Serverless framework that support a pull request based workflow"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Pasi Niemi", email = "pasi@nitor.com" }]
license = { text = "Apache-2.0" }
dynamic = ["entry-points"]
dependencies = [
    "argcomplete",
    "boto3",
    "cloudformation-utils==0.0.2",
    "configparser",
    "ec2-utils>=0.38",
    "ipaddr",
    "jmespath",
    "nitor-vault~=2.4",
    "pyaml",
    "pycryptodomex",
    "Pygments",
    "pyOpenSSL>=19.1.0",
    "pyotp",
    "pyqrcode",
    "python-dateutil",
    "PyYAML>=5.2",
    "requests",
    "scandir",
    "termcolor",
    "pypiwin32;platform_system=='Windows'",
    "win-unicode-console;platform_system=='Windows'",
    "wmi;platform_system=='Windows'",
]
classifiers = ["Programming Language :: Python :: Implementation :: CPython"]

[project.optional-dependencies]
testing = ["coverage", "mock", "pytest-cov", "pytest-mock", "pytest"]
dev = ["pip-tools", "ruff"]
build = ["build", "setuptools", "twine", "wheel"]

[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/NitorCreations/nameless-deploy-tools"
Download = "https://github.com/NitorCreations/nameless-deploy-tools/tarball/1.331"

[project.scripts]
associate-eip = "n_utils.cli:associate_eip"
cf-logs-to-cloudwatch = "ec2_utils.cli:log_to_cloudwatch"
cf-update-stack = "n_utils.cli:update_stack"
ec2-associate-eip = "n_utils.cli:associate_eip"
logs-to-cloudwatch = "ec2_utils.cli:log_to_cloudwatch"
n-include = "n_utils.cli:resolve_include"
n-include-all = "n_utils.cli:resolve_all_includes"
nameless-dt-enable-profile = "n_utils.profile_util:cli_enable_profile"
nameless-dt-load-project-env = "n_utils.project_util:load_project_env"
nameless-dt-register-complete = "n_utils.project_util:ndt_register_complete"
ndt = "n_utils.ndt:ndt"
signal-cf-status = "ec2_utils.cli:cf_signal_status"

[tool.setuptools]
packages = ["n_utils"]
zip-safe = false
include-package-data = true
script-files = [
    "bin/create-shell-archive.sh",
    "bin/ensure-letsencrypt-certs.sh",
    "bin/lastpass-fetch-notes.sh",
    "bin/lpssh",
    "bin/encrypt-and-mount.sh",
    "bin/mount-and-format.sh",
    "bin/setup-fetch-secrets.sh",
    "bin/ssh-hostkeys-collect.sh",
]

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc --cov=n_utils/ --capture=sys"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''venv*'''

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
include = ["*.py", "*.pyi", "**/pyproject.toml"]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["E4", "E7", "E9", "F", "W", "N", "UP", "I"]
ignore = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv*",
]

[tool.ruff.lint.per-file-ignores]
"n_utils/yuuuu3332111i1l1i.py" = ["F821", "N802", "N806"]
"n_utils/nameless-dt-enable-profile.py" = ["N999"]
"n_utils/nameless-dt-load-project-env.py" = ["N999"]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#isort
combine-as-imports = true
lines-between-types = 1
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
# profile = "black"
# manually specifying black compatibility to override line length
combine_as_imports = true
ensure_newline_before_comments = true
extend_skip = [".idea", ".vscode", ".venv", "venv"]
extend_skip_glob = ["venv*"]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
py_version = 39
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
use_parentheses = true
