[metadata]
description-file = README.md

[aliases]
test=pytest

[flake8]
max-line-length = 120
max-complexity = 12
# E203 = Whitespace before ':'. Needed for Black compatibility
extend-ignore = E203
exclude =
    __init__.py,
    __pycache__,
    .git/,
    .idea/,
    .vscode/,
    venv/,
    n_utils/yuuuu3332111i1l1i.py

[tool:pytest]
addopts = --cov-config=.coveragerc --cov=n_utils/ --capture=sys
